 - restructured code to add function process_event() (Alexei)
 - table ALARMS renamed to EVENTS (Alexei)
 - added automatic generation of database schemas (Alexei)
 - pinger will use unique temporary file name (Alexei)
 - developed SLA calculation periods (Eugene)
 - developed flexible update intervals for items (Eugene)

Integrated from 1.1.x

1.1.5

 - added support of macro TRIGGER.URL and TRIGGER.COMMENT (Alexei)

1.1.4

 - fixed Y asix value displaying for graphs (Eugene)
 - fixed warning displaying (Eugene)
 - added sorting by host in graph selection for screen element (Eugene)
 - fixed 'service_status[*]' for WinXX system (Eugene)
 - fixed processing of web.page.regexp[] (Alexei)
 - fixed trigger function fuzzytime() (Alexei)
 - fixed graph displaying with period 1d - 2d8h (Eugene)
 - fixed hosts remembering for graphs (Eugene)
 - fixed processing of unit "uptime" (Alexei)
 - support of ListenIP for ZABBIX server (Alexei)
 - changed PostgreSQL last OID function to pg_last_oid() (Alexei)
 - fix for start time in graph navigation (Alexei)
 - minor fix for Spanish translation (Alexei)
 - fixed default config name for zabbix_agent (Alexei)
 - fixed swapped system CPU and nice CPU stats in ZABBIX agent (Alexei)
 - fixed processing of item calculated as delta speed per second (Alexei)

1.1.3
 - added Dutch tranlation (Alexei)
 - fixed processing of SNMP HEX and OCTET string values (Alexei)
 - fixed system.swap.in[] and system.swap.out[] under Linux 2.4 (Alexei)
 - fixed occasional LIBSQLORA8-30002: Memory allocation error. (Alexei)
 - added support of macro {EVENT.ID} (Alexei)
 - support of environment variables for aleert scripts:
   ZABBIX_ALERT_ID,ZABBIX_ACTION_ID,ZABBIX_ALERT_TIME,ZABBIX_ALERT_MEDIATYPEID,
   ZABBIX_ALERT_STATUS,ZABBIX_ALERT_RETRIES,ZABBIX_ALERT_DELAY (Alexei)
 - added support of macro {TRIGGER.ID} (Alexei)
 - fixed calculation of nodata() (Alexei)
 - better processing of units 's', support for units 'uptime' (Alexei)