@@ -22,6 +22,7 @@ Integrated from 1.1.x
 
 1.1.5
 
+ - fixed "not equal" condition for hosts and host groups in actions (Alexei)
  - added support of macro TRIGGER.URL and TRIGGER.COMMENT (Alexei)
 
 1.1.4
